# api/spec/openapi/ParallelCluster.openapi.yaml
@@ -2002,8 +2002,18 @@ components:
       type: object
       description: Communicates that the operation would have succeeded without the dryrun flag.
       properties:
+        validationMessages:
+          type: array
+          items:
+            $ref: '#/components/schemas/ConfigValidationMessage'
+          description: List of messages collected during cluster config validation whose level is lower than the 'validationFailureLevel' set by the user.
         message:
           type: string
+        changeSet:
+          type: array
+          items:
+            $ref: '#/components/schemas/Change'
+          description: List of configuration changes requested by the operation.
     EC2Instance:
       type: object
       properties:
